<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<string name="server_url">http://192.168.1.37:20132/</string>

	<string name="photo_album_name">CityOutdoorsPhotos</string>
    
    <string name="app_name">City Outdoors</string>

    <string name="enter_email">Enter your email address</string>
    <string name="enter_password">Enter your password</string>

    <string name="main_screen_about">About</string>
    <string name="main_screen_map">Map</string>
	<string name="main_screen_collections">Park Features</string>
	<string name="main_screen_new_feature_content">Comment</string>
	<string name="main_screen_new_feature_report">Report It</string>
	<string name="main_screen_login">Log In</string>
	<string name="main_screen_logout">Log Out</string>	
    <string name="main_screen_favourites">My Favourites</string>	
    <string name="main_screen_update_now">Update Now</string>
    <string name="main_screen_wildlife">Wildlife</string>
    <string name="main_screen_whatson">Whats on</string>
    <string name="main_screen_preferences">Preferences</string>
    <string name="main_screen_updating_now">Updating now ...</string>
    
    <string name="main_screen_log_out_confirm_title">Log out</string>
    <string name="main_screen_log_out_confirm_message">Are you sure you want to log out?</string>
    <string name="main_screen_log_out_confirm_ok_button">OK</string>
    <string name="main_screen_log_out_confirm_cancel_button">Cancel</string>
    
    <string name="preferences_analyticsEnabled_title">Record anonymous usage?</string>
    <string name="preferences_analyticsEnabled_summary">We record anonymous usage of the app to help us improve.</string>
    
    
    <string name="month_1">January</string>
    <string name="month_2">Feburary</string>
    <string name="month_3">March</string>
    <string name="month_4">April</string>
    <string name="month_5">May</string>
    <string name="month_6">June</string>
    <string name="month_7">July</string>
    <string name="month_8">August</string>
    <string name="month_9">September</string>
    <string name="month_10">October</string>
    <string name="month_11">November</string>
    <string name="month_12">December</string>
    
    <string name="menu_next_month">Next Month</string>
    <string name="menu_prev_month">Previous Month</string>
    
    <string name="menu_next_image">Next</string>
    <string name="menu_prev_image">Previous</string>
        
    <string name="about_text">About City Outdoors</string>
    
    <string name="about_screen_legal">Legal</string>
    
    <string name="checkin_answer_button">Answer</string>
    <string name="checkin_answered_already">You have answered this question already!</string>
    <string name="checkin_answer_explanation_button">See More Information</string>
    <string name="checkin_answer_box_ok_button">Ok</string>
    <string name="checkin_answer_box_cancel_button">Cancel</string>
    <string name="checkin_answer_box_title">Enter your answer</string>
    <string name="checkin_no_multiplechoice_selected">Please select an answer</string>
    <string name="checkin_checking_answer_with_server_wait">Checking answer, please wait ...</string>
    <string name="checkin_result_correct">Correct!</string>
    <string name="checkin_result_wrong">Sorry, that is the wrong answer.</string>
    <string name="checkin_result_wrong_higherorlower_tolow">Sorry, to low! Try a higher answer.</string>
    <string name="checkin_result_wrong_higherorlower_tohigh">Sorry, to high! Try a lower answer.</string>
    
    <string name="feature_add_to_favourites_result_success">This has been added to your favourites</string>  
    <string name="feature_share_chooser_title">How do you want to share?</string>
    <string name="feature_email_chooser_title">Send mail...</string>
    <string name="feature_no_email_clients_error">Sorry, there are no email clients installed.</string>
    <string name="feature_no_telephone_clients_error">Sorry, We can\'t find a telephone!</string>
    <string name="feature_content_posted_by">Posted by </string>
    
        
    <string name="new_feature_report_take_photo">Take Photo</string>
    <string name="new_feature_report_select_photo">Select Photo from Gallery</string>
    <string name="new_feature_report_agree_T_and_C">I agree to the terms and conditions</string>
    <string name="new_feature_report_must_agree_T_and_C">You must agree to the terms and conditions!</string>
    <string name="new_feature_report_view_T_and_C">View Terms and Conditions</string>
    <string name="new_feature_report_name_label">Optional Name</string>
    <string name="new_feature_report_email_label">Optional Email</string>
    <string name="new_feature_report_submit">Send</string>
    <string name="new_feature_report_still_getting_position">We are still trying to get your current position; please wait a second and try again.</string>
    <string name="new_feature_report_starting_to_send">Your report is being sent.</string>
    
    <string name="new_feature_content_take_photo">Take Photo</string>
    <string name="new_feature_content_select_photo">Select Photo from Gallery</string>
    <string name="new_feature_content_agree_T_and_C">I agree to the terms and conditions</string>
    <string name="new_feature_content_must_agree_T_and_C">You must agree to the terms and conditions!</string>
    <string name="new_feature_content_view_T_and_C">View Terms and Conditions</string>
    <string name="new_feature_content_name_label">Optional Name</string>
    <string name="new_feature_content_submit">Send</string>    
    <string name="new_feature_content_still_getting_position">We are still trying to get your current position; please wait a second and try again.</string>
    <string name="new_feature_content_starting_to_send">Your comment is being sent.</string>
    
    
    <string name="login_or_signup_submit">Log In or Sign Up</string>   
    <string name="login_or_signup_forgot_password">Forgotten your password?</string>
    <string name="login_or_signup_use_twitter">Log In With Twitter Instead</string>
    <string name="login_or_signup_result_fail">Sorry! </string>
           
    <string name="loading_data_from_server_wait">Loading, please wait ...</string>
    <string name="login_checking_data_with_server_wait">Checking, please wait ...</string>
    
    <string name="browse_map_menu_add_content_current_position">Add a comment at my location</string>
    <string name="browse_map_menu_report_it_current_position">Report it at my location</string>
    
    <string name="feature_menu_favourite">Favourite</string>
    <string name="feature_menu_comment">Comment</string>
    <string name="feature_menu_report">Report</string>
    <string name="feature_menu_map">Map</string>
    <string name="feature_menu_share">Share</string>
    <string name="feature_menu_email">Email</string>
    <string name="feature_menu_phone">Phone</string>
    <string name="feature_menu_children">Features</string>
    
    <string name="feature_login_to_checkin">Please login to answer questions!</string> 
    
    <string name="splash_still_loading">We are still loading data, please wait. Do you have an internet connection?</string>
    
    <string name="send_feature_content_or_report_service_notification_content_title">Sending ...</string>
    <string name="send_feature_content_or_report_service_notification_content_text">Sending ...</string>
    
    <string name="send_feature_content_or_report_progress_all_uploaded">Everything has been uploaded!</string>
    <string name="send_feature_content_or_report_progress_uploading">Currently uploading data.</string>
</resources>