

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/checkin"
        android:title="@string/feature_menu_checkin"/>

    <item
        android:id="@+id/favourite"
        android:title="@string/feature_menu_favourite"/>
    
    
    <item
        android:id="@+id/comment"
        android:title="@string/feature_menu_comment"/>
    
    
    <item
        android:id="@+id/report"
        android:title="@string/feature_menu_report"/>
    
    <item
        android:id="@+id/map"
        android:title="@string/feature_menu_map"/>
     
    <item
        android:id="@+id/share"
        android:title="@string/feature_menu_share"/>
    
    <item
        android:id="@+id/email"
        android:title="@string/feature_menu_email"/>   
    
    <item
        android:id="@+id/phone"
        android:title="@string/feature_menu_phone"/>
    
</menu>


