<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="@style/page" >

	<include layout="@layout/title_bar"/>
    
    <EditText
        android:id="@+id/comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minLines="4"
        android:maxLines="10"
        android:gravity="top|left"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/photo_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" /> 

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/take_photo"
            style="@style/button"
            android:clickable="true"
            android:onClick="onClickTakePhoto"
            android:layout_width="0dp"
            android:layout_weight=".5" 
            android:text="@string/new_feature_content_take_photo" />

        <Button
            android:id="@+id/select_photo"
            style="@style/button"
            android:clickable="true"
            android:onClick="onClickSelectPhoto"
            android:layout_width="0dp"
            android:layout_weight=".5" 
            android:text="@string/new_feature_content_select_photo" />
        
    </LinearLayout>

	 <LinearLayout 
	    android:id="@+id/anonymous_user_wrapper"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >   
    
	    <CheckBox
	        android:id="@+id/agree_T_and_C"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/new_feature_content_agree_T_and_C"
    		style="@style/checkbox" />
         
	     <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:clickable="true"
	        android:onClick="onClickViewTAndC"
	        android:text="@string/new_feature_content_view_T_and_C"
    		style="@style/text_link" />
	
		 <TextView
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:text="@string/new_feature_content_name_label"
    		style="@style/text" />
		
		<EditText
		    android:id="@+id/name"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:ems="10" />     
	     
    </LinearLayout>
    
    <Button
        android:id="@+id/submit"
        android:onClick="onClickSend"
		android:clickable="true"               
        android:text="@string/new_feature_content_submit"
   		style="@style/button" />

</LinearLayout>