<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/question"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/answer"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAnswerHigherOrLower"
        android:text="@string/checkin_answer_button"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/answered"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkin_answered_already"
        android:visibility="invisible" />
        
    
    <Button
        android:id="@+id/answer_explanation"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAnswerExplanation"
        android:text="@string/checkin_answer_explanation_button"
        android:visibility="invisible" />
</LinearLayout>